fix: spacing

--- a/components/Action/src/index.scss
+++ b/components/Action/src/index.scss
@@ -37,17 +37,19 @@
 
   &__context {
     display: flex;
-    flex-shrink: 0;
+    align-items: center;
     gap: var(--denhaag-action-context-gap);
 
     @media (width >= 768px) {
-      align-items: center;
+      gap: var(--denhaag-action-context-lg-gap);
     }
   }
 
   &__details {
     display: flex;
+    flex-grow: 1;
     flex-shrink: 0;
+    align-items: center;
     gap: var(--denhaag-action-details-gap);
 
     @media (width >= 768px) {
@@ -122,16 +124,6 @@
       outline-color: var(--denhaag-file-focus-outline-color);
       outline-width: var(--denhaag-file-focus-outline-width);
       outline-style: var(--denhaag-file-focus-outline-style);
-    }
-
-    .denhaag-action__details {
-      flex-direction: row;
-      justify-content: space-between;
-      gap: var(--denhaag-action-single-details-gap);
-
-      @media (width >= 768px) {
-        gap: var(--denhaag-action-single-details-lg-gap);
-      }
     }
   }
 
